@@ -17,6 +17,11 @@ from docutils import TransformSpec
 from docutils._compat import b
 from docutils.error_reporting import locale_encoding, ErrorString, ErrorOutput
 
+
+class InputError(IOError): pass
+class OutputError(IOError): pass
+
+
 class Input(TransformSpec):
 
     """
@@ -216,12 +221,13 @@ class FileInput(Input):
                 try:
                     self.source = open(source_path, mode, **kwargs)
                 except IOError, error:
-                    if not handle_io_errors:
-                        raise
-                    print >>self._stderr, ErrorString(error)
-                    print >>self._stderr, (u'Unable to open source'
-                        u" file for reading ('%s'). Exiting." % source_path)
-                    sys.exit(1)
+                    if handle_io_errors:
+                        print >>self._stderr, ErrorString(error)
+                        print >>self._stderr, (
+                            u'Unable to open source file for reading ("%s").'
+                            u'Exiting.' % source_path)
+                        sys.exit(1)
+                    raise InputError(error.errno, error.strerror, source_path)
             else:
                 self.source = sys.stdin
         elif (sys.version_info >= (3,0) and
@@ -292,7 +298,7 @@ class FileOutput(Output):
 
     def __init__(self, destination=None, destination_path=None,
                  encoding=None, error_handler='strict', autoclose=True,
-                 handle_io_errors=None, mode=None):
+                 handle_io_errors=True, mode=None):
         """
         :Parameters:
             - `destination`: either a file-like object (which is written
@@ -338,12 +344,13 @@ class FileOutput(Output):
         try:
             self.destination = open(self.destination_path, self.mode, **kwargs)
         except IOError, error:
-            if not self.handle_io_errors:
-                raise
-            print >>self._stderr, ErrorString(error)
-            print >>self._stderr, (u'Unable to open destination file'
-                u" for writing ('%s').  Exiting." % self.destination_path)
-            sys.exit(1)
+            if self.handle_io_errors:
+                print >>self._stderr, ErrorString(error)
+                print >>self._stderr, (u'Unable to open destination file'
+                    u" for writing ('%s').  Exiting." % self.destination_path)
+                sys.exit(1)
+            raise OutputError(error.errno, error.strerror, 
+                              self.destination_path)
         self.opened = True
 
     def write(self, data):
